# much_segmenter

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml
.github/: ci-requirements.txt
.github/workflows/: ci.yaml
src/much_segmenter/: __init__.py  much_segmenter.py  utils.py
tests/: data.py  test_segmentation.py
